force-app/main/default/objects/P_L_Statement__c/P_L_Statement__c.object-meta.xml
<CustomObject>
    <label>P&amp;L Statement</label>
    <nameField>
        <label>P&amp;L Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P&amp;L Statement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>