force-app/main/default/objects/P_L_Statement__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>GL_Code__r.GL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>