force-app/main/default/objects/P_L_Statement__c/fields/August_Acutal__c.field-meta.xml
<CustomField>
    <fullName>August_Acutal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>August Acutal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>