force-app/main/default/objects/P_L_Statement__c/fields/Cash_Tyoe__c.field-meta.xml
<CustomField>
    <fullName>Cash_Tyoe__c</fullName>
    <label>Cash Tyoe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>