force-app/main/default/objects/P_L_Statement__c/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <defaultValue>0</defaultValue>
    <label>February</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>