force-app/main/default/objects/P_L_Statement__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>P&amp;L Statement</relationshipLabel>
    <relationshipName>P_L_Statement</relationshipName>
    <type>Lookup</type>
</CustomField>