force-app/main/default/objects/P_L_Statement__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <defaultValue>0</defaultValue>
    <label>January</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>