force-app/main/default/objects/P_L_Statement__c/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <defaultValue>0</defaultValue>
    <label>July</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>