force-app/main/default/objects/P_L_Statement__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <defaultValue>0</defaultValue>
    <label>June</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>