force-app/main/default/objects/P_L_Statement__c/fields/November_Actual__c.field-meta.xml
<CustomField>
    <fullName>November_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>November Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>