force-app/main/default/objects/P_L_Statement__c/fields/P_L_Category__c.field-meta.xml
<CustomField>
    <fullName>P_L_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P&amp;L Category</label>
    <referenceTo>P_L_Category__c</referenceTo>
    <relationshipLabel>P&amp;L Statement</relationshipLabel>
    <relationshipName>P_L_Statement</relationshipName>
    <type>Lookup</type>
</CustomField>