force-app/main/default/objects/P_L_Statement__c/fields/Parent_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Bank Account</label>
    <referenceTo>Payment_Account__c</referenceTo>
    <relationshipLabel>P&amp;L Statement</relationshipLabel>
    <relationshipName>P_L_Statement</relationshipName>
    <type>Lookup</type>
</CustomField>