force-app/main/default/objects/P_L_Statement__c/fields/Parent_P_L_Statement__c.field-meta.xml
<CustomField>
    <fullName>Parent_P_L_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent P&amp;L Statement</label>
    <referenceTo>P_L_Statement__c</referenceTo>
    <relationshipLabel>P&amp;L Statement</relationshipLabel>
    <relationshipName>P_L_Statement</relationshipName>
    <type>Lookup</type>
</CustomField>