force-app/main/default/objects/P_L_Statement__c/fields/September_Acutal__c.field-meta.xml
<CustomField>
    <fullName>September_Acutal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>September Acutal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>