force-app/main/default/objects/P_L_Statement__c/fields/Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>Statement_Type__c</fullName>
    <label>Statement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>