force-app/main/default/objects/P_L_Statement__c/fields/week10_Date__c.field-meta.xml
<CustomField>
    <fullName>week10_Date__c</fullName>
    <label>week10 Date</label>
    <type>Date</type>
</CustomField>