force-app/main/default/objects/P_L_Statement__c/fields/week11_Date__c.field-meta.xml
<CustomField>
    <fullName>week11_Date__c</fullName>
    <label>week11 Date</label>
    <type>Date</type>
</CustomField>