force-app/main/default/objects/P_L_Statement__c/fields/week12_Date__c.field-meta.xml
<CustomField>
    <fullName>week12_Date__c</fullName>
    <label>week12 Date</label>
    <type>Date</type>
</CustomField>