force-app/main/default/objects/P_L_Statement__c/fields/Week_Total__c.field-meta.xml
<CustomField>
    <fullName>Week_Total__c</fullName>
    <formula>week1_Actual__c +  week2_Actual__c +  week3_Actual__c +  week4_Actual__c +  week5_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>