force-app/main/default/objects/P_L_Statement__c/fields/Year_Total_Actual__c.field-meta.xml
<CustomField>
    <fullName>Year_Total_Actual__c</fullName>
    <label>Year Total Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>