force-app/main/default/objects/P_L_Statement__c/fields/Year_Total_Variance__c.field-meta.xml
<CustomField>
    <fullName>Year_Total_Variance__c</fullName>
    <formula>Year_Total__c - Year_Total_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>