force-app/main/default/objects/P_L_Statement__c/recordTypes/Cash_Statement.recordType-meta.xml
<RecordType>
    <fullName>Cash_Statement</fullName>
    <active>true</active>
    <label>Cash Statement</label>
</RecordType>