force-app/main/default/objects/P_L_Statement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>P_L_Category__c</columns>
    <columns>GL_Code__c</columns>
    <columns>Year__c</columns>
    <columns>Year_Total__c</columns>
    <columns>Type__c</columns>
    <columns>Type_Label__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>All</label>
</ListView>